# terraformed

./: .gitignore  Cargo.toml  Justfile  app.go  go.mod  go.sum  install.sh  lazytf  readme.md
internal/: colors.go
internal/ui/: header.go  layout.go
models/: state.go
src/: app.rs  cli.rs  event.rs  lib.rs  main.rs  tracing.rs  ui.rs
src/components/: pane.rs
src/panes/: mod.rs  runs.rs  status.rs  workspaces.rs
src/tui/: ui.rs
