[package]
name = "terraformed"
version = "0.1.0"
description = "A simple TUI for managing terraform"
authors = ["n3tw0rth"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
clap = { version = "4.5.37", features = ["derive", "env"] }
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
